# opencv

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
imgs/: gray_orange.txt
src/: CMakeLists.txt
src/example/: CMakeLists.txt  example.cpp
src/lab1/: CMakeLists.txt  README.md  lab1.cpp
src/lab1/include/lab1/: lab1.hpp
src/lab1/src/: lab1.cpp
src/lab1/test/: test_lab1.cpp
src/lab2/: CMakeLists.txt  lab2.cpp
src/lab2/include/lab2/: lab2.hpp
src/lab2/src/: lab2.cpp
src/lab2/test/: test_lab2.cpp
src/lab3/: CMakeLists.txt  lab3.cpp
src/lab3/include/lab3/: lab3.hpp
src/lab3/src/: lab3.cpp
src/lab3/test/: test_lab3.cpp
src/lab4/: CMakeLists.txt  lab4.cpp
src/lab4/include/lab4/: lab4.hpp
src/lab4/src/: lab4.cpp
src/lab4/test/: test_lab4.cpp
src/tutorial/: CMakeLists.txt  basic.cpp
src/tutorial/basic/: CMakeLists.txt  basic.cpp
src/tutorial/canny/: CMakeLists.txt  canny.cpp
src/tutorial/filter/: CMakeLists.txt  filter.cpp
src/tutorial/hough/: CMakeLists.txt  hough.cpp
src/tutorial/images/: CMakeLists.txt  images.cpp
src/tutorial/kmeans/: kmeans.py
src/tutorial/levelset/: CMakeLists.txt  levelset.cpp  levelset.py
src/tutorial/levelset2/: CMakeLists.txt  levelset2.cpp
src/tutorial/mask/: CMakeLists.txt  mask.cpp
src/tutorial/roi/: CMakeLists.txt  roi.cpp
src/tutorial/threshold/: CMakeLists.txt  threshold.cpp
src/tutorial/watershed/: CMakeLists.txt  watershed.cpp
